[package]
name = "quad-timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"